# axolotl-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: codeql.yml  image-compressor.yml
incl/: ApplicationContext.hpp
incl/Component/: CameraComponent.hpp  MeshComponent.hpp
incl/Exception/: ExceptionBase.h  ExceptionBase.hpp  GlfwInitializationException.h  GlfwInitializationException.hpp  GlfwNullErrorException.h  GlfwNullErrorException.hpp  WindowCreationException.h  WindowCreationException.hpp
incl/Logging/: Log.h  Log.hpp  LogLevel.h  LogLevel.hpp  LoggingCore.h
incl/Service/: GLfwErrorHumanizerService.h  GLfwErrorHumanizerService.hpp
incl/Wt/: GlfwWrapper.h  GlfwWrapper.hpp
incl/exception/: exception_base.h  glfw_initialization_exception.h  glfw_null_error_exception.h  window_creation_exception.h
incl/logging/: logging_core.h
incl/service/: glfw_error_humanizer_service.h
incl/wt/: glfw_wrapper.h
res/shaders/: triangle.fs  triangle.vs
samples/: CMakeLists.txt  basic_window.cpp  xmake.lua
samples/basic_window/: CMakeLists.txt  basic_window.cpp
src/: AxolotlEngine.sln  main.cpp
src/AxolotlEngine.WebAssembly/: AxolotlEngine.WebAssembly.csproj  Program.cs  _Imports.razor
src/AxolotlEngine.WebAssembly/Pages/: Index.razor
src/AxolotlEngine.WebAssembly/Properties/: launchSettings.json
src/AxolotlEngine.WebAssembly/Shared/: MainLayout.razor
src/AxolotlEngine.WebAssembly/wwwroot/: index.html
src/exception/: exception_base.h  glfw_initialization_exception.h  glfw_null_error_exception.h  window_creation_exception.h
src/logging/: logging_core.h
src/service/: glfw_error_humanizer_service.h
src/wt/: glfw_config_cook.h  glfw_wrapper.cpp  glfw_wrapper.h
test/: CMakeLists.txt  main.cpp  xmake.lua
test/logging/: CMakeLists.txt  logging_core_tests.cpp
